verkauf-notebook beendet, verkauf_pc begonnen
verkauf_notebook beide artikel hinzugefügt; verkauf_pc zwei hinzugefügt dritte nicht mögli´ch wegen footer_banner, kein abhängiges bewegen möglich

--- a/public/login.html
+++ b/public/login.html
@@ -32,37 +32,34 @@
 		<button id="myBtn1" class="dropbtn1">PC/Laptop</button>
 		  <div id="myDropdown1" class="pcbutton-content1">
 			<a href="verkauf_notebook.html">Notebook</a>
-			<a href="#Tastatur">PC</a>
-			<a href="#Monitor">Monitor</a>
-			<a href="#Etc">etc</a>
+			<a href="verkauf_pc.html">PC</a>
+
 		  </div>
 		</div>
 		
 		<div class="monitorbutton">
 		<button id="myBtn2" class="dropbtn2">Monitor</button>
 		  <div id="myDropdown2" class="monitorbutton-content2">
-			<a href="#4k">4k</a>
-			<a href="#FullHd">Full-HD</a>
-			<a href="#Etc">etc</a>
+			<a href="verkauf_4k.html">4k</a>
+			<a href="verkauf_fullhd.html">Full-HD</a>
 		  </div>
 		</div>
 		
 		<div class="zubehoerbutton">
 		<button id="myBtn3" class="dropbtn3">Zubehoer</button>
 		  <div id="myDropdown3" class="zubehoerbutton-content3">
-			<a href="#shit">Shit</a>
-			<a href="#lit">Lit</a>
-			<a href="#Etc">etc</a>
+			<a href="verkauf_maus.html">Maus</a>
+			<a href="verkauf_tastatur.html">Tastatur</a>
+			<a href="verkauf_kabel.html">Kabel</a>
 		  </div>
 		</div>
 		
 		<div class="konsolenbutton">
 		<button id="myBtn4" class="dropbtn4">Konsolen</button>
 		  <div id="myDropdown4" class="konsolenbutton-content4">
-			<a href="#ps4">PS4</a>
-			<a href="#XBOX">XBOX One</a>
-			<a href="#Nintendo">Nintendo Switch</a>
-			<a href="#Etc">etc</a>
+			<a href="verkauf_ps.html">PlayStation</a>
+			<a href="verkauf_xbox.html">XBOX</a>
+			<a href="verkauf_nintendo.html">Nintendo</a>
 		  </div>
 		</div>
 
