--- a/public/verkauf_pc.html
+++ b/public/verkauf_pc.html
@@ -147,22 +147,19 @@
 	
 			
 	</footer>
-
 	
-	
-	<!-----Gallerie---------------------------------------------->
+		<!-----Gallerie---------------------------------------------->
 	
 	<!--Erstes Produkt------->
 	
-	<img src="images/LG 14Z960 UltraSlim Notebook.jpg" id="ultslimpic" width="300" height="250">
+	<img src="images/CSL Multimedia PC Sprint 5845Pro (Quad) inkl. WIN 7 Pro.jpg" id="cslpcpic" width="230" height="250">
 	
-	<h7>LG 14Z960 Ultraslim Notebook, 14 Zoll (35 cm) Full-HD, 
-		Intel Core i5-6200U, <br>4 GB RAM, 256 GB SSD, Windows 10,
-		Schwarz
-	</h7>
+	<h12>CSL Multimedia PC Sprint 5845Pro (Quad) inkl. Windows 7 Professional<br>
+	AMD A10-9700 4x 3500 MHz, 8 GB RAM, 1000 GB SATA, Radeon R7, DVD-RW,<br> Gigabit LAN, USB 3.1
+	</h12>
 	<!-- <%= products[2].name %> -->
 	
-	<table id="table1">
+	<table id="table3">
 		<tr>
 			<th>Marke</th>
 			<td>MSI</td>	
@@ -198,27 +195,26 @@
 		
 	</table>
 	
-	<h8>825,-</h8><!-- <%= products[2].price %> -->
+	<h13>419,-</h13><!-- <%= products[2].price %> -->
 	<div id="trennlinie1">&nbsp;</div>
 	<div id="trennlinie2">&nbsp;</div>
 	<div id="trennlinie3">&nbsp;</div>
 	
+	<a href="" class="warenkorb" id="cslpcwarenkorb"> In den Warenkorb</a>
 	
 	
-	<a href="" class="warenkorb" id="ultslimnotebook"> In den Warenkorb</a>
-	<!--Kiebell Laptop------------------------>
 	<!--zweites Produkt------->
-	<img src="images/Kiebel Gaming Laptop Ultra 7.0 [181167].jpg" id="kiebellaptop" width="300" height="250">
 	
-	<h10>
-		Kiebel Gaming-Laptop Ultra 7.0 [181167] -
-		Intel Core i7-7700 4x 3.6GHz |<br> 43.9cm (17.3") FullHD LED-Display G-SYNC |
-		16GB DDR4 | 256GB M.2 + 1TB HDD |<br> NVIDIA Geforce GTX 1070 8GB | USB3.1 |
-		Sound Blaster X-Fi | 433Mbit WLAN + Bluetooth
-	</h10>
+	<img src="images/Ankermann-PC Wildrabbit GAMER.jpg" id="ankermannpc" width="230" height="250">
+	
+	<h14>
+		Ankermann-PC WildRabbit GAMER, AMD 950 4x 3.50GHz, 
+		Zotac GeForce GTX 1060 6GB,<br> 8GB DDR4 2400, 1TB HDD, 
+		Microsoft Windows 10 Professional, EAN 4260409311688
+	</h14>
 	
 	
-	<table id="table2">
+	<table id="table4">
 		<tr>
 			<th>Marke</th>
 			<td>Kiebel</td>	
@@ -253,16 +249,40 @@
 		</tr>		
 	</table>
 	
-	<h11>2.499.-</h11>
+	<h15>819.-</h15>
 
-	<a href="" class="warenkorb" id="kiebelwarenkorb"> In den Warenkorb</a>
+	<a href="" class="warenkorb" id="ankermannpcwarenkorb"> In den Warenkorb</a>
 	
 	<div id="trennlinie4">&nbsp;</div>
 	<div id="trennlinie5">&nbsp;</div>
 	<div id="trennlinie6">&nbsp;</div>
+
+	
+	<!--drittes Produkt------->
+	
+	<div id="trennlinie8">&nbsp;</div>
 	
 	
 	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+		
 	
 	</body>
 </html>
