Login Logout switch geschafft
Login logout: Laptop und pc fenster implemenstiert. im backend implementiert

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 		<div class="pcbutton">
 		<button id="myBtn1" class="dropbtn1">PC/Laptop</button>
 		  <div id="myDropdown1" class="pcbutton-content1">
-			<a href="verkauf_notebook.html">Notebook</a>
-			<a href="verkauf_pc.html">PC</a>
+			<a href="verkauf_notebook">Notebook</a>
+			<a href="verkauf_pc">PC</a>
 
 		  </div>
 		</div>
@@ -147,7 +147,7 @@
 	
 	<!--Registrierungsbutton-->
 	<p class="GBAY-Reg">Immer noch kein GBAY-Konto?</p>
-	<h9>Immer noch kein GBAY-Konto?</h9>
+	
 	<a href="/registrieren.html" class="reg_button">Kostenlos Anmelden</a>
 	
 			
