--- a/public/verkauf_notebook.html
+++ b/public/verkauf_notebook.html
@@ -21,10 +21,10 @@
 	<img src="images/warenkorb.png" id="warenkorb_logo"; width="200" height="200">
 	<a href="/" class="warenkorb_logo" method = "post">Warenkorb</a>
 	
-	
+	shiiiiiiiiiiiiiiittttttttttt
 	
 	<!--Login Buuton-->
-	<a href="/login.html" class="login"> Login</a>
+	<a href="/login.html" class="login"> Lo---gin</a>
 	<!--Suchleiste-->
 	<input type="text" id="Suchen" name="Suchen" placeholder="Suche...">
 	<button type="Suchen" id="suchen">Suchen</button>
@@ -160,7 +160,7 @@
 		Intel Core i5-6200U, <br>4 GB RAM, 256 GB SSD, Windows 10,
 		Schwarz
 	</h7>
-	<!-- <%= products[2].name %> -->
+	<%= products[2].name %>
 	
 	<table id="table1">
 		<tr>
