--- a/public/verkauf_pc.html
+++ b/public/verkauf_pc.html
@@ -34,8 +34,8 @@
 		<div class="pcbutton">
 		<button id="myBtn1" class="dropbtn1">PC/Laptop</button>
 		  <div id="myDropdown1" class="pcbutton-content1">
-			<a href="verkauf_notebook.html">Notebook</a>
-			<a href="verkauf_pc.html">PC</a>
+			<a href="verkauf_notebook">Notebook</a>
+			<a href="verkauf_pc">PC</a>
 
 		  </div>
 		</div>
