Templates für alle verkauf seiten fertiggestellt
verkauf pc css verschwunden

--- a/public/registrieren.html
+++ b/public/registrieren.html
@@ -34,37 +34,39 @@
 		<div class="pcbutton">
 		<button id="myBtn1" class="dropbtn1">PC/Laptop</button>
 		  <div id="myDropdown1" class="pcbutton-content1">
-			<a href="verkauf_notebook.html">Notebook</a>
-			<a href="verkauf_pc.html">PC</a>
+			<a href="verkauf_notebook">Notebook</a>
+			<a href="verkauf_pc">PC</a>
 
 		  </div>
 		</div>
 		
-		<div class="monitorbutton">
-		<button id="myBtn2" class="dropbtn2">Monitor</button>
-		  <div id="myDropdown2" class="monitorbutton-content2">
-			<a href="verkauf_4k.html">4k</a>
-			<a href="verkauf_fullhd.html">Full-HD</a>
+		<div class="tvbutton">
+		<button id="myBtn2" class="dropbtn2">TV + Audio</button>
+		  <div id="myDropdown2" class="tvbutton-content2">
+			<a href="verkauf_monitor">Monitore</a>
+			<a href="verkauf_fernseher">Fernseher</a>
+			<a href="verkauf_heimkino">Heimkino</a>
 		  </div>
 		</div>
 		
 		<div class="zubehoerbutton">
 		<button id="myBtn3" class="dropbtn3">Zubehoer</button>
 		  <div id="myDropdown3" class="zubehoerbutton-content3">
-			<a href="verkauf_maus.html">Maus</a>
-			<a href="verkauf_tastatur.html">Tastatur</a>
-			<a href="verkauf_kabel.html">Kabel</a>
+			<a href="verkauf_maus">Maus</a>
+			<a href="verkauf_tastatur">Tastatur</a>
+			<a href="verkauf_kabel">Kabel</a>
 		  </div>
 		</div>
 		
 		<div class="konsolenbutton">
 		<button id="myBtn4" class="dropbtn4">Konsolen</button>
 		  <div id="myDropdown4" class="konsolenbutton-content4">
-			<a href="verkauf_ps.html">PlayStation</a>
-			<a href="verkauf_xbox.html">XBOX</a>
-			<a href="verkauf_nintendo.html">Nintendo</a>
+			<a href="verkauf_ps">PlayStation</a>
+			<a href="verkauf_xbox">XBOX</a>
+			<a href="verkauf_nintendo">Nintendo</a>
 		  </div>
 		</div>
+
 
 	<script>
 		// Get the button, and when the user clicks on it, execute myFunction
@@ -142,7 +144,7 @@
 	
 	<!--Registrierungsbutton-->
 	<p class="GBAY-Reg">Immer noch kein GBAY-Konto?</p>
-	<h9>Immer noch kein GBAY-Konto?</h9>
+	
 	<a href="/registrieren.html" class="reg_button">Kostenlos Anmelden</a>
 	
 			
