--- a/public/login.html
+++ b/public/login.html
@@ -31,35 +31,36 @@
 		<div class="pcbutton">
 		<button id="myBtn1" class="dropbtn1">PC/Laptop</button>
 		  <div id="myDropdown1" class="pcbutton-content1">
-			<a href="verkauf_notebook.html">Notebook</a>
-			<a href="verkauf_pc.html">PC</a>
+			<a href="verkauf_notebook">Notebook</a>
+			<a href="verkauf_pc">PC</a>
 
 		  </div>
 		</div>
 		
-		<div class="monitorbutton">
-		<button id="myBtn2" class="dropbtn2">Monitor</button>
-		  <div id="myDropdown2" class="monitorbutton-content2">
-			<a href="verkauf_4k.html">4k</a>
-			<a href="verkauf_fullhd.html">Full-HD</a>
+		<div class="tvbutton">
+		<button id="myBtn2" class="dropbtn2">TV + Audio</button>
+		  <div id="myDropdown2" class="tvbutton-content2">
+			<a href="verkauf_monitor">Monitore</a>
+			<a href="verkauf_fernseher">Fernseher</a>
+			<a href="verkauf_heimkino">Heimkino</a>
 		  </div>
 		</div>
 		
 		<div class="zubehoerbutton">
 		<button id="myBtn3" class="dropbtn3">Zubehoer</button>
 		  <div id="myDropdown3" class="zubehoerbutton-content3">
-			<a href="verkauf_maus.html">Maus</a>
-			<a href="verkauf_tastatur.html">Tastatur</a>
-			<a href="verkauf_kabel.html">Kabel</a>
+			<a href="verkauf_maus">Maus</a>
+			<a href="verkauf_tastatur">Tastatur</a>
+			<a href="verkauf_kabel">Kabel</a>
 		  </div>
 		</div>
 		
 		<div class="konsolenbutton">
 		<button id="myBtn4" class="dropbtn4">Konsolen</button>
 		  <div id="myDropdown4" class="konsolenbutton-content4">
-			<a href="verkauf_ps.html">PlayStation</a>
-			<a href="verkauf_xbox.html">XBOX</a>
-			<a href="verkauf_nintendo.html">Nintendo</a>
+			<a href="verkauf_ps">PlayStation</a>
+			<a href="verkauf_xbox">XBOX</a>
+			<a href="verkauf_nintendo">Nintendo</a>
 		  </div>
 		</div>
 
@@ -139,7 +140,7 @@
 	
 	<!--Registrierungsbutton-->
 	<p class="GBAY-Reg">Immer noch kein GBAY-Konto?</p>
-	<h9>Immer noch kein GBAY-Konto?</h9>
+	
 	<a href="/registrieren.html" class="reg_button">Kostenlos Anmelden</a>
 	
 			
@@ -149,17 +150,19 @@
 	
 	<!--Login Fenster----------------------------------------------->
 	
-	
+	<a href="/" class="previous" id="return_button">Abbrechen</a>
+	<img src="images/GBAY_Logo.png" id="logo_header_login"; width="200" height="200">
 	<div id="blackRow4">&nbsp;</div>
 	<div id="grauerKasten">&nbsp;</div>
+
 	<h1>
 		Login
 	</h1>
 	<form action = "/login" method = "post">
 		<h2>E-Mail:</h2>
-		<input type = "text" name = "username"  id="username" placeholder="Eingabe..."/><br/>
+		<input type = "text" name = "username"  id="username" placeholder="Benutzername..."/><br/>
 		<h6>Passwort:</h6>
-		<input type = "password" name = "password" id="password" placeholder="Password.."/><br/>
+		<input type = "password" name = "password" id="password" placeholder="Passwort.."/><br/>
 		<button type = "submit" id="submit">Einloggen</button>
 		
 	</form>
@@ -169,11 +172,7 @@
 		<button id="mypwVerg" class="pwVerg">Passwort vergessen?</button>
 	</div>
 	
-	<a href = "/registrieren.html" class="register">Registrieren</a>
-	
 	
 
-
-		<h4>Brauchst du einen Account?</h4>
 	</body>
 </html>	
