--- a/public/verkauf_maus.html
+++ b/public/verkauf_maus.html
@@ -34,8 +34,8 @@
 		<div class="pcbutton">
 		<button id="myBtn1" class="dropbtn1">PC/Laptop</button>
 		  <div id="myDropdown1" class="pcbutton-content1">
-			<a href="verkauf_notebook.html">Notebook</a>
-			<a href="verkauf_pc.html">PC</a>
+			<a href="verkauf_notebook">Notebook</a>
+			<a href="verkauf_pc">PC</a>
 
 		  </div>
 		</div>
@@ -43,26 +43,26 @@
 		<div class="monitorbutton">
 		<button id="myBtn2" class="dropbtn2">Monitor</button>
 		  <div id="myDropdown2" class="monitorbutton-content2">
-			<a href="verkauf_4k.html">4k</a>
-			<a href="verkauf_fullhd.html">Full-HD</a>
+			<a href="verkauf_4k">4k</a>
+			<a href="verkauf_fullhd">Full-HD</a>
 		  </div>
 		</div>
 		
 		<div class="zubehoerbutton">
 		<button id="myBtn3" class="dropbtn3">Zubehoer</button>
 		  <div id="myDropdown3" class="zubehoerbutton-content3">
-			<a href="verkauf_maus.html">Maus</a>
-			<a href="verkauf_tastatur.html">Tastatur</a>
-			<a href="verkauf_kabel.html">Kabel</a>
+			<a href="verkauf_maus">Maus</a>
+			<a href="verkauf_tastatur">Tastatur</a>
+			<a href="verkauf_kabel">Kabel</a>
 		  </div>
 		</div>
 		
 		<div class="konsolenbutton">
 		<button id="myBtn4" class="dropbtn4">Konsolen</button>
 		  <div id="myDropdown4" class="konsolenbutton-content4">
-			<a href="verkauf_ps.html">PlayStation</a>
-			<a href="verkauf_xbox.html">XBOX</a>
-			<a href="verkauf_nintendo.html">Nintendo</a>
+			<a href="verkauf_ps">PlayStation</a>
+			<a href="verkauf_xbox">XBOX</a>
+			<a href="verkauf_nintendo">Nintendo</a>
 		  </div>
 		</div>
 
@@ -150,13 +150,36 @@
 	
 	
 	
-	<!-----Gallerie---------------------------------------------->
-	<img src="images/MausMsi.jpg" alt="Paris" width="200" height="200">
+	<!-----MAIN---------------------------------------------->
+	<script>
+	// When the user clicks on div, open the popup
+	function myFunction11() {
+		var popupmsimaus = document.getElementById("msimauswarenkorb");
+		popupmsimaus.classList.toggle("show");
+	}
+	</script>
+	<script>
+	function myFunction12() {
+		var popupankermannpc = document.getElementById("ankermannpcwarenkorb");
+		popupankermannpc.classList.toggle("show");
+	}
+	</script>
+	
+	<script>
+	function myFunction13() {
+		var popupkiebelpc = document.getElementById("kiebelpcwarenkorb");
+		popupkiebelpc.classList.toggle("show");
+	}
+	</script>		
+	
+	
+	<!--Erstes Produkt------->
+
+	<img src="images/MausMsi.jpg" id="msimauspic" width="200" height="200">
 	
 	<h7>MSI DS B1 Scroll-Rad, PC-Maus, PC/Mac, 2-Wege, Gaming Produkt</h7>
 	
-	
-	<table>
+	<table id="table1">
 		<tr>
 			<th>Marke</th>
 			<td>MSI</td>	
@@ -172,19 +195,36 @@
 		<tr>
 			<th>Produktabmessungen</th>
 			<td>20,5 x 15,5 x 8,5 cm</td>			
+		</tr>
+		<tr>
+			<th>Prozessor</th>
+			<td>AMD A10-9700 4x 3500 MHz</td>			
+		</tr>
+		<tr>
+			<th>Arbeitsspeicher-Größe</th>
+			<td>8 GB</td>
+		<tr>
+			<th>Festplattenkapazität</th>
+			<td>1000 GB</td>			
+		</tr>
+		<tr>
+			<th>Beschreibung Grafikkarte<</th>
+			<td>AMD Radeon R7 Grafik, 2 GB</td>			
+		</tr>
 		</tr>		
 	</table>
 	
-	<h8>Preis: 9,90</h8>
+	<h8>9,90.-</h8>
 
-	<a href="" class="warenkorb" id="msimaus"> In den Warenkorb</a>
+	<div id="trennlinie1">&nbsp;</div>
+	<div id="trennlinie2">&nbsp;</div>
+	<div id="trennlinie3">&nbsp;</div>
 	
 	
 	
-	
-	
-	
-	
+	<div class="popupmsimaus" onclick="myFunction11()">In den Warenkorb
+		<span  class="warenkorb" id="msimauswarenkorb"> Anmeldung erforderlich!</span>
+	</div>	
 	
 	
 	</body>
