login/regis neues design

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	
 	<!--Warenkorb Logo--->
 	<img src="images/warenkorb.png" id="warenkorb_logo"; width="200" height="200">
-	<a href="/" class="warenkorb_logo" method = "post">Warenkorb</a>
+	<a href="warenkorb" class="warenkorb_logo" method = "post">Warenkorb</a>
 	
 	
 	
@@ -155,13 +155,44 @@
 	</footer>
 		
 	
-	<!-----Gallerie---------------------------------------------->
+	<!-----MAIN---------------------------------------------->
 	
-	<a  href="saleoftheday.html">
+	<!-- <a  href="verkauf_ps">
 		<img src="images/saleoftheday.png" id="saleoftheday" width="600" height="400">
-	</a>
+	</a> -->
 	  	
+	<img src="images/pesudoaids slogan unten.jpg" id="slogan" >
 	
+	
+	<!-----Gallerie---------------------------------------------->
+	<div class="gallery">
+		<a target="_blank"  href="verkauf_ps">
+			<img src="images/saleoftheday.png"  width="300" height="50">
+		</a>
+		<div class="desc">Add a description of the image here</div>
+	</div>
+
+	<div class="gallery2">
+	  <a target="_blank" href="verkauf_monitor">
+		<img src="images/ACER-K242HQLC --Monitor.png" alt="Forest" width="600" height="400">
+	  </a>
+	  <div class="desc">Add a description of the image here</div>
+	</div>
+
+	<div class="gallery3">
+	  <a target="_blank" href="verkauf_heimkino">
+		<img src="images/Kiebel Gaming Laptop Ultra 7.0 [181167].jpg" alt="Northern Lights" width="600" height="100">
+	  </a>
+	  <div class="desc">Add a description of the image here</div>
+	</div>
+
+	<div class="gallery4">
+	  <a target="_blank" href="verkauf_fernseher">
+		<img src="images/sony tv.jpg" alt="Mountains" width="600" height="400">
+	  </a>
+	  <div class="desc">Add a description of the image here</div>
+	</div>
+
 	
 	</body>
 </html>
