--- a/public/login.html
+++ b/public/login.html
@@ -151,7 +151,7 @@
 	<!--Login Fenster----------------------------------------------->
 	
 	<a href="/" class="previous" id="return_button">Abbrechen</a>
-	<img src="images/GBAY_Logo.png" id="logo_header_login"; width="200" height="200">
+	<img src="images/GBAY_Logo sw.png" id="logo_header_login"; width="200" height="200">
 	<div id="blackRow4">&nbsp;</div>
 	<div id="grauerKasten">&nbsp;</div>
 
