--- a/verkauf_fernseher.html
+++ b/verkauf_fernseher.html
@@ -24,7 +24,7 @@
 	
 	
 	<!--Login Buuton-->
-	<a href="/login.html" class="login"> Lo----gin</a>
+	<a href="/login.html" class="login"> Login</a>
 	<!--Suchleiste-->
 	<input type="text" id="Suchen" name="Suchen" placeholder="Suche...">
 	<button type="Suchen" id="suchen">Suchen</button>
