--- a/verkauf_ps.html
+++ b/verkauf_ps.html
@@ -323,9 +323,9 @@
 	</table>
 	
 	<h18>399.-</h18>
+	<h19>299.-</h19>
 	
-
-	
+	<img src="images/redRow.png" id="redRow">
 	<div id="trennlinie7">&nbsp;</div>
 	<div id="trennlinie8">&nbsp;</div>
 	<div id="trennlinie9">&nbsp;</div>
