--- a/verkauf_notebook.html
+++ b/verkauf_notebook.html
@@ -24,7 +24,7 @@
 	
 	
 	<!--Login Buuton-->
-	<a href="/login.html" class="login"> Lo----gin</a>
+	<a href="/login.html" class="login"> Login</a>
 	<!--Suchleiste-->
 	<input type="text" id="Suchen" name="Suchen" placeholder="Suche...">
 	<button type="Suchen" id="suchen">Suchen</button>
@@ -174,7 +174,11 @@
 	<!-----MAIN---------------------------------------------->
 	
 	<!--Erstes Produkt------->
-	
+	<!--<ul>
+            <% for (let i=0; i < errors.length; i++) { %>
+                <li><%= errors[i] %></li>
+            <% } %>
+        </ul> -->
 	<img src="images/LG 14Z960 UltraSlim Notebook.jpg" id="ultslimpic" width="300" height="250">
 	
 	<h7>LG 14Z960 Ultraslim Notebook, 14 Zoll (35 cm) Full-HD, 
