Letzte Schönheitsfehler behoben

--- a/public/login.html
+++ b/public/login.html
@@ -159,7 +159,7 @@
 		Login
 	</h1>
 	<form action = "/login" method = "post">
-		<h2>E-Mail:</h2>
+		<h2>Benutzername:</h2>
 		<input type = "text" name = "username"  id="username" placeholder="Benutzername..."/><br/>
 		<h6>Passwort:</h6>
 		<input type = "password" name = "password" id="password" placeholder="Passwort.."/><br/>
