--- a/public/registrieren.html
+++ b/public/registrieren.html
@@ -161,7 +161,7 @@
 
 
 	<form action="/registrieren" method="POST" >
-		<h12>E-Mail:</h12>
+		<h12>Benutzername:</h12>
 		<input type = "text" name = "username"  id="usernamereg" placeholder="Benutzername..."/><br/>
 		<h13>Passwort:</h13>
 		<input type = "password" name = "password" id="passwordreg" placeholder="Passwort.."/><br/>
