--- a/verkauf_monitor.html
+++ b/verkauf_monitor.html
@@ -220,6 +220,8 @@
 	</table>
 	
 	<h8>119,99,-</h8>
+	<h15>80.-</h15>
+	<img src="images/redRow.png" id="redRow2">
 	<div id="trennlinie1">&nbsp;</div>
 	<div id="trennlinie2">&nbsp;</div>
 	<div id="trennlinie3">&nbsp;</div>
