--- a/index.html
+++ b/index.html
@@ -165,32 +165,34 @@
 	
 	
 	<!-----Gallerie---------------------------------------------->
+	<h14>Angebote des Tages</h14>
+	
 	<div class="gallery">
 		<a target="_blank"  href="verkauf_ps">
 			<img src="images/saleoftheday.png"  width="300" height="50">
 		</a>
-		<div class="desc">Add a description of the image here</div>
+		<div class="desc1">PS4 Pro 1TB</div>
 	</div>
 
 	<div class="gallery2">
 	  <a target="_blank" href="verkauf_monitor">
-		<img src="images/ACER-K242HQLC --Monitor.png" alt="Forest" width="600" height="400">
+		<img src="images/ACER-K242HQLC --Monitor.png" alt="Forest" width="400" height="400">
 	  </a>
-	  <div class="desc">Add a description of the image here</div>
+	  <div class="desc2">ACER-K242HQLC Monitor</div>
 	</div>
 
 	<div class="gallery3">
 	  <a target="_blank" href="verkauf_heimkino">
 		<img src="images/Kiebel Gaming Laptop Ultra 7.0 [181167].jpg" alt="Northern Lights" width="600" height="100">
 	  </a>
-	  <div class="desc">Add a description of the image here</div>
+	  <div class="desc3">Kiebel Gaming Laptop Ultra</div>
 	</div>
 
 	<div class="gallery4">
 	  <a target="_blank" href="verkauf_fernseher">
 		<img src="images/sony tv.jpg" alt="Mountains" width="600" height="400">
 	  </a>
-	  <div class="desc">Add a description of the image here</div>
+	  <div class="desc4">Sony KD-65XD7505</div>
 	</div>
 
 	
